# phd-day-parallelization

./: .gitmodules
cluster-parallel/: answer-gpu.sh  answer.sh  compile-llama-gpu.sh  compile-llama.sh  compile_llama.sh  compile_llama_cuda.sh  description-gpu.sh  description-mixtral-gpu.sh  description-mixtral.py  description-mixtral.sh  description-vicuna-gpu.sh  description-vicuna.sh  description.py  description.sh  download-mixtral-beegfs.sh  download-model-beegfs.sh  download-model.sh  download-vicuna-beegfs.sh  hello.py  hello.sh  requirements.txt  skills.txt
cpu-parallel/: .gitignore  CMakeLists.txt  amdahl-law.cpp  basic-loop-openmp.cpp  basic-loop.cpp  compile-examples.sh  dynamic-scheduling.cpp  parallel-reduction.cpp
slides/: .gitignore  Makefile  main.tex  util.tex
